# SONAR-SamplingIndex

./: .gitmodules  CMakeLists.txt  README.md  calc_tree_size.cpp  exp.cpp  exp_aggregation.cpp  exp_query_size.cpp  generate_data.cpp  how_to_build_rpcserver.txt  mongo_types.cpp  mongo_types.h  random_shuffle.h  test.cpp  test2.cpp  test_disk_read.cpp  test_hilbert.cpp  test_random_number.cpp  test_random_shuffle.cpp  util.h
examples/: data_gen.py  stress_test.py
experiments/: Data_Source_Information.cpp  Data_Source_Information.h  Independence_Experiment.cpp  Independence_Experiment.h  aggragate_experiments.cpp  aggragate_experiments.h  aggragate_query.h  build_osm_vary_elements.sh  build_tree_experiments.cpp  build_tree_experiments.h  experiment_utilities.cpp  experiment_utilities.h  insert_and_delete_tree_experiments.cpp  insert_and_delete_tree_experiments.h  query_latency_experiment.cpp  query_latency_experiment.h  query_tree_experiments.cpp  query_tree_experiments.h  streaming_aggragate_query.cpp  streaming_aggragate_query.h  vary_sample_buffer.cpp  vary_sample_buffer.h
hilbert/: 2d.h  3d.h  hilbert.h
level_sampling/: level_sampling.h
rtree/: block_cache.h  block_manager.cpp  block_manager.h  eraser.h  finder.h  inserter.h  io_layers.h  io_layers_impl.h  io_nodes.h  mem_node_cleaner.h  mem_node_saver.h  naive_sample_query.h  node_loader.h  nodes.h  nodes_impl.h  range_reporter.h  rtree.h  rtree_impl.h  sample_builder.h  sample_query.h
rtree/tests/: integrity_checker.h
serialization/: default_serializers.h  serializer.h
server_code/: RStree_basic.cpp  RStree_basic.h  Sampling_server.cpp  Sampling_server.h  Server_cli.cpp  Server_launcher.cpp  Server_launcher.h  basic_types.h  build_command_main.cpp  dump_mongo_command_main.cpp  float_payload_types.h  int_payload_types.h  query_command_main.cpp  query_cursor.h  query_cursor_basic.cpp  query_cursor_basic.h  query_cursor_repository.cpp  query_cursor_repository.h  sampling_structure.h  sampling_structure_repository.cpp  sampling_structure_repository.h  server_main.cpp  server_rpc_tests.cpp  server_settings.cpp  server_settings.h
server_code/protobuf/: sampling_api.proto  server_state.proto
